--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta property="og:title" content="Mosfik's Resume"/>
+    <meta property="og:title" content="Farzana's Resume"/>
 
-    <meta property="og:description" content="Resume of Md. Mosfikur Rahman"/>
+    <meta property="og:description" content="Resume of Farzana Yesmin"/>
 
-    <meta property="og:image" content="https://dummyimage.com/100x100/000/fff&text=RESUME-MMR"/>
-    <title>Resume - Mosfik</title>
+    <meta property="og:image" content="https://dummyimage.com/100x100/000/fff&text=RESUME-FY"/>
+    <title>Resume-Farzana-Yesmin</title>
 </head>
 <body>
 <script type="text/javascript">
